--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ Transparent Transactions: Provides clear records of inventory movement and finan
   </section>
 
   <footer>
-    <p> <span style="color: lightskyblue;">Copyright 2023</span> &copy; Harshit Tyagi. <span style="color: lightskyblue;">All Right reserved</span></p>
+    <p> <span style="color:rgb(29, 200, 226);">Copyright 2023</span> &copy; Harshit Tyagi. <span style="color:rgb(29, 200, 226);">All Right reserved</span></p>
   </footer>
 </body>
 
